# android-libuv-openssl

./: README.md  jni.sh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/fzc/jni/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/xgn/androidlibuvlibwebsocketsboringssl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .CMakeLists.txt.swp  Backend.h  CMakeLists.txt  Hub.cpp  Hub.h  WebSocket.cpp  WebSocket.h  WebSocketJni.cpp  XgnLog.h  a.h  main.cpp  native-lib.cpp
app/src/main/cpp/include/: lws_config.h
app/src/main/cpp/include/openssl/: opensslconf.h
app/src/main/java/com/fzc/jni/: JniClass.java  MainActivity.java  MainActivityFragment.java  Native.java  SoLoader.java  WebSocketClient.java
app/src/main/java/com/xgn/: WebSocket.java  WebSocketListener.java
app/src/main/java/com/xgn/androidlibuvlibwebsocketsboringssl/: App.java  MainActivity.java  XgnTask.java
app/src/main/java/com/xgn/nettyClient/: WebSocketClient.java  WebSocketClientHandler.java
app/src/main/java/com/xinguang/msgprotocol/client/transfer/: UserTypePB.java
app/src/main/java/com/xinguang/tubobo/msgprotocol/transfer/: NotifyTaskDispatchPB.java
app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/fzc/jni/: ExampleUnitTest.java
app/src/test/java/com/xgn/androidlibuvlibwebsocketsboringssl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libuv-1.11.0/: android-configure  android-configure-arm64  android-configure-armv7
libwebsocke-compile/: build.sh
